Got rid of navigation button at the top, while it's no longer possible to get to the second fragment, this is closer to the true vision

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -10,25 +10,23 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="16dp">
-        <Button
-                android:id="@+id/button_first"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/next"
-                app:layout_constraintBottom_toTopOf="@id/textview_first"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
                 android:id="@+id/textview_first"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:text="@string/lorem_ipsum"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/button_first"/>
+        />
+        <ImageView
+                android:src="@android:drawable/sym_def_app_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/imageView2" tools:layout_editor_absoluteY="20dp"
+                android:layout_gravity="top|end"
+                android:layout_marginTop="@dimen/avatar_margin"
+                android:layout_marginEnd="@dimen/avatar_margin"
+                tools:layout_editor_absoluteX="284dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
