--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,13 @@
         android:fitsSystemWindows="true"
         tools:context=".MainActivity">
 
+    <ImageView
+            android:src="@android:drawable/sym_def_app_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/imageView3"
+            android:layout_gravity="top|end"
+            android:layout_marginTop="@dimen/avatar_margin"
+            android:layout_marginEnd="@dimen/avatar_margin" />
     <com.google.android.material.appbar.AppBarLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
