Added a lil guy to represent the parts of the body trained in a day/session

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Fitness parts model colors -->
+    <!-- We'll get more specific later -->
+    <color name="default_unworked">#FFFFFF</color>
+    <color name="default_worked">#FF0000</color>
+    <color name="arms">#FF0000</color>
+    <color name="legs">#00FF00</color>
+    <color name="torso">#0000FF</color>
+    <color name="head">#FF00FF</color>
 </resources>
