--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -14,8 +14,8 @@
             tools:layout_editor_absoluteY="1dp" android:minHeight="730dp">
         <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="349dp"
-                android:layout_height="164dp"
+                android:layout_width="339dp"
+                android:layout_height="480dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -26,12 +26,25 @@
                     android:textStyle="bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/textView7"/>
-            <TextView
-                    android:text="@string/presentation_calories_burned"
-                    android:textAlignment="center"
-                    android:layout_weight="3"
+            <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView8"/>
+                    android:layout_height="205dp"
+                    android:id="@+id/fitness_info_layout3" android:layout_weight="1">
+                <ImageView
+                        android:src="@drawable/baseline_tag_faces_24"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent" android:id="@+id/imageView4"
+                />
+                <TextView
+                        android:text="@string/presentation_calories_burned"
+                        android:gravity="center"
+                        android:textAlignment="textStart"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent" android:id="@+id/textView"/>
+            </LinearLayout>
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -72,6 +85,24 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content" android:id="@+id/textView_worked_on_placeholder"
                 />
+            </LinearLayout>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/fitness_info_layout4"
+                    android:layout_weight="1">
+                <ImageView
+                        android:layout_weight="1"
+                        android:src="@drawable/baseline_access_time_24"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent" android:id="@+id/imageView5"
+                />
+                <ImageView
+                        android:layout_weight="1"
+                        android:src="@drawable/fitness_parts_model"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent" android:id="@+id/imageView2"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
