--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -36,7 +36,8 @@
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent" android:id="@+id/imageView4"
-                />
+                        tools:ignore="NestedWeights"
+                        android:contentDescription="@string/description_emoji_placeholder"/>
                 <TextView
                         android:text="@string/presentation_calories_burned"
                         android:gravity="start|center_vertical"
@@ -96,12 +97,14 @@
                         android:src="@drawable/baseline_access_time_24"
                         android:layout_width="0dp"
                         android:layout_height="match_parent" android:id="@+id/imageView5"
-                />
+                        tools:ignore="NestedWeights"
+                        android:contentDescription="@string/description_clock_placeholder"/>
                 <ImageView
                         android:layout_weight="1"
                         android:src="@drawable/fitness_parts_model"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent" android:id="@+id/imageView2"/>
+                        android:layout_height="match_parent" android:id="@+id/imageView2"
+                        android:contentDescription="@string/description_fitness_parts_model"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
