--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,29 @@
         android:fitsSystemWindows="true"
         tools:context=".MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-            android:layout_height="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:fitsSystemWindows="true"
-    />
-    <include layout="@layout/content_main"/>
-    <ImageButton
-            android:src="@android:drawable/sym_def_app_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/user_avatar"
-            android:layout_gravity="top|end"
-            android:layout_marginTop="@dimen/avatar_margin"
-            android:layout_marginEnd="@dimen/avatar_margin"
-            android:background="@null"
+            android:layout_height="745dp">
 
-    />
+        <ImageButton
+                android:src="@android:drawable/sym_def_app_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/user_avatar"
+                android:layout_gravity="top|end"
+                android:background="@null"
+                android:contentDescription="@string/description_user_avatar_icon"
+
+                app:margin="16dp"
+                tools:layout_editor_absoluteX="332dp" tools:layout_editor_absoluteY="16dp"/>
+        <androidx.fragment.app.FragmentContainerView
+                android:layout_width="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_height="70dp" android:name="com.example.myapplication.FirstFragment"
+                android:id="@+id/fragmentContainerView2"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" tools:layout="@layout/fitness_nav_bottom"/>
+        <include layout="@layout/content_main" app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
