--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -8,29 +8,21 @@
         android:fitsSystemWindows="true"
         tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ImageButton
+            android:src="@android:drawable/sym_def_app_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_avatar"
+            android:layout_gravity="top|end"
+            android:background="@null"
+            android:layout_margin="16dp"
+            android:contentDescription="@string/description_user_avatar_icon"
+    />
+    <androidx.fragment.app.FragmentContainerView
             android:layout_width="match_parent"
-            android:layout_height="745dp">
-
-        <ImageButton
-                android:src="@android:drawable/sym_def_app_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/user_avatar"
-                android:layout_gravity="top|end"
-                android:background="@null"
-                android:contentDescription="@string/description_user_avatar_icon"
-
-                app:margin="16dp"
-                tools:layout_editor_absoluteX="332dp" tools:layout_editor_absoluteY="16dp"/>
-        <androidx.fragment.app.FragmentContainerView
-                android:layout_width="match_parent"
-                android:layout_gravity="bottom"
-                android:layout_height="70dp" android:name="com.example.myapplication.FirstFragment"
-                android:id="@+id/fragmentContainerView2"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" tools:layout="@layout/fitness_nav_bottom"/>
-        <include layout="@layout/content_main" app:layout_constraintBottom_toBottomOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+            android:layout_gravity="bottom"
+            android:layout_height="70dp" android:name="com.example.myapplication.FirstFragment"
+            android:id="@+id/fragmentContainerView2"
+            tools:layout="@layout/fitness_nav_bottom"/>
+    <include layout="@layout/content_main"/>
+</FrameLayout>
