--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -10,7 +10,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="16dp"
-
             tools:layout_editor_absoluteY="1dp" android:minHeight="730dp">
         <LinearLayout
                 android:orientation="vertical"
@@ -21,15 +20,15 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintVertical_bias="0.234">
             <TextView
+                    style="@style/primary_header"
                     android:text="@string/infoheader_calories_burned"
                     android:textAlignment="center"
-                    android:textStyle="bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/textView7"/>
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="205dp"
+                    android:layout_height="250dp"
                     android:id="@+id/fitness_info_layout3" android:layout_weight="1">
                 <ImageView
                         android:src="@drawable/baseline_tag_faces_24"
@@ -39,6 +38,7 @@
                         tools:ignore="NestedWeights"
                         android:contentDescription="@string/description_emoji_placeholder"/>
                 <TextView
+                        style="@style/body_text"
                         android:text="@string/presentation_calories_burned"
                         android:gravity="start|center_vertical"
                         android:layout_width="0dp"
@@ -51,15 +51,15 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/fitness_info_layout1">
                 <TextView
+                        style="@style/primary_header"
                         android:text="@string/infoheader_time_spent_total"
-                        android:textStyle="bold"
                         android:textAlignment="center"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content" android:id="@+id/textView_calories_burned_info"/>
                 <TextView
+                        style="@style/primary_header"
                         android:text="@string/infoheader_worked_on"
-                        android:textStyle="bold"
                         android:textAlignment="center"
                         android:layout_width="0dp"
                         android:layout_weight="1"
@@ -73,12 +73,14 @@
                     android:id="@+id/fitness_info_layout2"
             >
                 <TextView
+                        style="@style/body_text"
                         android:text="@string/presentation_time_spent"
                         android:textAlignment="center"
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content" android:id="@+id/textView_calories_burned_placeholder"/>
                 <TextView
+                        style="@style/body_text"
                         android:text="@string/presentation_worked_on"
                         android:textAlignment="center"
                         android:layout_width="0dp"
