--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <androidx.fragment.app.FragmentContainerView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:name="com.example.myapplication.FirstFragment"
-            android:id="@+id/home_screen"/>
+            android:id="@+id/home_screen" tools:layout="@layout/fragment_first"/>
     <ImageButton
             android:src="@android:drawable/sym_def_app_icon"
             android:layout_width="wrap_content"
