--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -9,7 +9,7 @@
             android:id="@+id/textview_first"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="116dp"
+            android:layout_marginTop="76dp"
             android:text="@string/login_text"
             android:textSize="50sp"
             android:fontFamily="sans-serif-medium"
@@ -23,11 +23,11 @@
             android:hint="@string/email_input_text"
             android:autofillHints="emailAddress"
             android:inputType="textEmailAddress"
-            android:padding="10dp"
-            app:layout_constraintTop_toTopOf="parent"
+
+            app:layout_constraintTop_toBottomOf="@id/textview_first"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="264dp" app:layout_constraintHorizontal_bias="0.5"/>
+            android:layout_marginTop="60dp" app:layout_constraintHorizontal_bias="0.5"/>
     <EditText
             android:id="@+id/password_input"
             android:layout_width="300dp"
@@ -35,20 +35,20 @@
             android:hint="@string/password_input_text"
             android:autofillHints="password"
             android:inputType="textPassword"
-            android:padding="10dp"
-            app:layout_constraintTop_toTopOf="parent"
+
+            app:layout_constraintTop_toBottomOf="@id/email_input"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="360dp" app:layout_constraintHorizontal_bias="0.5"/>
+            android:layout_marginTop="40dp" app:layout_constraintHorizontal_bias="0.5"/>
     <Button
             android:id="@+id/button_second"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:text="@string/login_button"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/password_input"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="464dp" app:layout_constraintHorizontal_bias="0.497"/>
+            android:layout_marginTop="32dp"/>
     <TextView
             android:id="@+id/sign_in_link"
             android:layout_width="wrap_content"
@@ -59,7 +59,7 @@
             android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
-            android:layout_marginBottom="16dp"/>
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias=".5"
+            android:layout_marginBottom="15dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
