--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -23,7 +23,8 @@
             android:hint="@string/email_input_text"
             android:autofillHints="emailAddress"
             android:inputType="textEmailAddress"
-
+            android:background="@drawable/borders"
+            android:padding="5dp"
             app:layout_constraintTop_toBottomOf="@id/textview_first"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +36,8 @@
             android:hint="@string/password_input_text"
             android:autofillHints="password"
             android:inputType="textPassword"
-
+            android:background="@drawable/borders"
+            android:padding="5dp"
             app:layout_constraintTop_toBottomOf="@id/email_input"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
