--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -1,6 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    <TextView
+            android:id="@+id/textview_first"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="76dp"
+            android:text="@string/login_text"
+            android:textSize="50sp"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center_horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
+    <EditText
+            android:id="@+id/name_input"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:hint="@string/email_input_text"
+            android:autofillHints="emailAddress"
+            android:inputType="textEmailAddress"
+            android:background="@drawable/borders"
+            android:padding="5dp"
+            app:layout_constraintTop_toBottomOf="@id/textview_first"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toLeftOf="parent"
+            android:layout_marginTop="60dp" app:layout_constraintHorizontal_bias="0.5"/>
+    <EditText
+            android:id="@+id/email_input"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:hint="@string/email_input_text"
+            android:autofillHints="emailAddress"
+            android:inputType="textEmailAddress"
+            android:background="@drawable/borders"
+            android:padding="5dp"
+            app:layout_constraintTop_toBottomOf="@id/textview_first"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toLeftOf="parent"
+            android:layout_marginTop="60dp" app:layout_constraintHorizontal_bias="0.5"/>
+    <EditText
+            android:id="@+id/password_input"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:hint="@string/email_input_text"
+            android:autofillHints="emailAddress"
+            android:inputType="textPassword"
+            android:background="@drawable/borders"
+            android:padding="5dp"
+            app:layout_constraintTop_toBottomOf="@id/textview_first"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toLeftOf="parent"
+            android:layout_marginTop="60dp" app:layout_constraintHorizontal_bias="0.5"/>
+    <EditText
+            android:id="@+id/reenter_password_input"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:hint="@string/password_input_text"
+            android:autofillHints="password"
+            android:inputType="textPassword"
+            android:background="@drawable/borders"
+            android:padding="5dp"
+            app:layout_constraintTop_toBottomOf="@id/email_input"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="parent"
+            android:layout_marginTop="40dp" app:layout_constraintHorizontal_bias="0.5"/>
+    <Button
+            android:id="@+id/button_second"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:text="@string/login_button"
+            app:layout_constraintTop_toBottomOf="@id/password_input"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="32dp"/>
+    <TextView
+            android:id="@+id/sign_in_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sign_up_link"
+            android:textColor="@color/button_purple"
+            android:textSize="14sp"
+            android:padding="8dp"
+            app:layout_constraintTop_toBottomOf="@id/button_second"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias=".5"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="230dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
