--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:name="com.example.myapplication.FirstFragment"
             android:id="@+id/home_screen" tools:layout="@layout/fragment_first"/>
-    <!--<ImageButton
+    <ImageButton
             android:src="@android:drawable/sym_def_app_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
             android:background="@null"
             android:layout_margin="16dp"
             android:contentDescription="@string/avatar_icon"
-    />-->
+    />
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
