--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -63,7 +63,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="32dp"/>
     <TextView
-            android:id="@+id/sign_in_link"
+            android:id="@+id/sign_up_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sign_up_link"
