--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -11,7 +11,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="76dp"
-            android:text="@string/login_text"
+            android:text="@string/sign_up_text"
             android:textSize="50sp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center_horizontal"
@@ -22,7 +22,7 @@
             android:id="@+id/name_input"
             android:layout_width="300dp"
             android:layout_height="48dp"
-            android:hint="@string/email_input_text"
+            android:hint="@string/name_input"
             android:autofillHints="emailAddress"
             android:inputType="textEmailAddress"
             android:background="@drawable/borders"
@@ -32,7 +32,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintRight_toLeftOf="parent"
-            android:layout_marginTop="60dp" app:layout_constraintHorizontal_bias="0.5"/>
+            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.495"/>
     <EditText
             android:id="@+id/email_input"
             android:layout_width="300dp"
@@ -47,43 +47,57 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintRight_toLeftOf="parent"
-            android:layout_marginTop="60dp" app:layout_constraintHorizontal_bias="0.5"/>
+            android:layout_marginTop="108dp" app:layout_constraintHorizontal_bias="0.495"/>
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/black"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            app:layout_constraintTop_toBottomOf="@id/email_input"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+
     <EditText
             android:id="@+id/password_input"
             android:layout_width="300dp"
             android:layout_height="48dp"
-            android:hint="@string/email_input_text"
+            android:hint="@string/password_input_text"
             android:autofillHints="emailAddress"
             android:inputType="textPassword"
             android:background="@drawable/borders"
             android:padding="5dp"
-            app:layout_constraintTop_toBottomOf="@id/textview_first"
+            app:layout_constraintTop_toBottomOf="@id/email_input"
             app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintRight_toLeftOf="parent"
-            android:layout_marginTop="60dp" app:layout_constraintHorizontal_bias="0.5"/>
+            android:layout_marginTop="80dp" app:layout_constraintHorizontal_bias="0.504"/>
     <EditText
             android:id="@+id/reenter_password_input"
             android:layout_width="300dp"
             android:layout_height="48dp"
-            android:hint="@string/password_input_text"
+            android:hint="@string/reenter_password_input_text"
             android:autofillHints="password"
             android:inputType="textPassword"
             android:background="@drawable/borders"
             android:padding="5dp"
-            app:layout_constraintTop_toBottomOf="@id/email_input"
+            app:layout_constraintTop_toBottomOf="@id/password_input"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="parent"
             app:layout_constraintRight_toLeftOf="parent"
-            android:layout_marginTop="40dp" app:layout_constraintHorizontal_bias="0.5"/>
+            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.495"/>
     <Button
             android:id="@+id/button_second"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:text="@string/login_button"
-            app:layout_constraintTop_toBottomOf="@id/password_input"
+            app:layout_constraintTop_toBottomOf="@id/reenter_password_input"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -92,13 +106,28 @@
             android:id="@+id/sign_in_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sign_up_link"
+            android:text="@string/login_link"
             android:textColor="@color/button_purple"
             android:textSize="14sp"
             android:padding="8dp"
             app:layout_constraintTop_toBottomOf="@id/button_second"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias=".5"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="230dp"/>
+
+    <TextView
+            android:id="@+id/login_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sign_up_link"
+            android:textColor="@color/button_purple"
+            android:textSize="14sp"
+            android:padding="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintRight_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias=".5"
