--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -26,7 +26,7 @@
             android:layout_height="48dp"
             android:hint="@string/email_input_text"
             android:autofillHints="emailAddress"
-            android:textColorHint="@color/black"
+            android:textColorHint="@color/white"
             android:inputType="textEmailAddress"
             android:background="@drawable/borders"
             android:padding="5dp"
