--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,5 +13,11 @@
         <item name="android:textColor">@color/light_text</item>
         <item name="android:textSize">20sp</item>
     </style>
+    <style name="login_text">
+        <item name="android:shadowColor">@color/black</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">0</item>
+        <item name="android:shadowRadius">2</item>
+    </style>
 
 </resources>
