--- a/app/src/main/res/layout/fragment_instructor.xml
+++ b/app/src/main/res/layout/fragment_instructor.xml
@@ -3,14 +3,14 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".CommunityBoard"
+             tools:context=".Instructor"
              android:background="@drawable/gradients">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/community"
+            android:text="@string/instructor"
             android:gravity="center"
             android:textSize="32sp"
             android:textColor="@color/white"
