Fixed conflicts after rashid's push with my own code, All screens should work now

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,10 +16,8 @@
             android:name="com.example.myapplication.SecondFragment"
             android:label="@string/Login_fragment_label"
             tools:layout="@layout/fragment_second">
-
-        <action
-                android:id="@+id/action_SecondFragment_to_FirstFragment"
-                app:destination="@id/HomeFragment"/>
+        <action android:id="@+id/action_LoginFragment_to_HomeFragment" app:destination="@id/HomeFragment"/>
+        <action android:id="@+id/action_LoginFragment_to_signUp" app:destination="@id/signUp"/>
     </fragment>
 
     <fragment android:id="@+id/FriendsFragment"
@@ -41,4 +39,8 @@
               android:name="com.example.myapplication.SettingsFragment"
               android:label="fragment_settings"
               tools:layout="@layout/fragment_settings"/>
+    <fragment android:id="@+id/signUp" android:name="com.example.myapplication.SignUp" android:label="SignUp">
+        <action android:id="@+id/action_signUp_to_HomeFragment" app:destination="@id/HomeFragment"/>
+        <action android:id="@+id/action_signUp_to_LoginFragment2" app:destination="@id/LoginFragment"/>
+    </fragment>
 </navigation>
