Deleted a temp file

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="torso">#0000FF</color>
     <color name="head">#00FFFF</color>
     <color name="button_purple">#6851A5</color>
+    <color name="light_blue">#ADD8E6</color>
 </resources>
