added functionalty to MainActivity.kt so that settings button will take us to settings fragment and not break when it is already on settings screen and settings is chosen

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,9 @@
             android:id="@+id/HomeFragment"
             android:name="com.example.myapplication.FirstFragment"
             android:label="@string/Home_fragment_label"
-            tools:layout="@layout/fragment_first"/>
+            tools:layout="@layout/fragment_first">
+        <action android:id="@+id/action_HomeFragment_to_SettingsFragment" app:destination="@id/SettingsFragment"/>
+    </fragment>
 
     <fragment
             android:id="@+id/LoginFragment"
