added settings usage

--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -28,7 +28,7 @@
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:inputType="textEmailSubject"
-            android:background="@drawable/borders"
+            android:background="@drawable/border_white"
             android:padding="8dp"
             android:layout_marginTop="80dp"
             style="@style/login_text"
@@ -45,7 +45,7 @@
             android:textColor="@color/white"
             android:autofillHints="password"
             android:inputType="textPassword"
-            android:background="@drawable/borders"
+            android:background="@drawable/border_white"
             android:padding="8dp"
             android:layout_marginTop="40dp"
             style="@style/login_text"
