--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,30 +4,29 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".SettingsFragment"
-             android:background="@drawable/gradient_blue">
+             android:background="@color/light_yellow">
 
     <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp">
+            android:layout_height="649dp"
+            android:padding="16dp"
+            android:layout_marginBottom="60dp">
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-            <!-- Title -->
+
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/settings"
                     android:gravity="center"
                     android:textSize="30sp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:fontFamily="sans-serif-medium"
                     android:paddingBottom="16dp"/>
-
-            <!-- Settings Section 1 -->
 
             <LinearLayout
                     android:layout_width="match_parent"
@@ -42,16 +41,35 @@
                         android:layout_weight="1"
                         android:text="@string/private_profile"
                         android:textSize="24sp"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/black"/>
 
                 <Switch
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
                         android:id="@+id/switch_notifications"/>
             </LinearLayout>
-
-            <!-- Settings Section 2 -->
-
         </LinearLayout>
+
     </androidx.core.widget.NestedScrollView>
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border_black"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="650dp">
+
+        <com.google.android.material.button.MaterialButton
+                android:id="@+id/log_out"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/log_out"
+                android:textColor="@color/black"
+                android:backgroundTint="@android:color/transparent"
+                android:layout_margin="0dp"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="2"
+                />
+    </LinearLayout>
 </FrameLayout>
