--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -39,7 +39,7 @@
             android:hint="@string/name_input"
             android:autofillHints="emailAddress"
             android:inputType="textEmailAddress"
-            android:background="@drawable/borders"
+            android:background="@drawable/border_white"
             android:padding="8dp"
             android:layout_marginTop="30dp"
             style="@style/login_text"
@@ -57,7 +57,7 @@
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:inputType="textEmailSubject"
-            android:background="@drawable/borders"
+            android:background="@drawable/border_white"
             android:padding="8dp"
             android:layout_marginTop="20dp"
             style="@style/login_text"
@@ -74,7 +74,7 @@
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:inputType="textPassword"
-            android:background="@drawable/borders"
+            android:background="@drawable/border_white"
             android:padding="8dp"
             android:layout_marginTop="20dp"
             style="@style/login_text"
@@ -91,7 +91,7 @@
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:inputType="textPassword"
-            android:background="@drawable/borders"
+            android:background="@drawable/border_white"
             android:padding="8dp"
             android:layout_marginTop="20dp"
             style="@style/login_text"
