--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -39,7 +39,7 @@
             android:hint="@string/name_input"
             android:autofillHints="emailAddress"
             android:inputType="textEmailAddress"
-            android:background="@drawable/borders"
+            android:background="@drawable/border_white"
             android:padding="8dp"
             android:layout_marginTop="30dp"
             style="@style/login_text"
@@ -49,6 +49,22 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
     <EditText
+            android:id="@+id/username_input"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:hint="@string/username_input"
+            android:autofillHints="username"
+            android:inputType="textEmailAddress"
+            android:background="@drawable/border_white"
+            android:padding="8dp"
+            android:layout_marginTop="20dp"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toBottomOf="@id/name_input"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    <EditText
             android:id="@+id/email_input"
             android:layout_width="300dp"
             android:layout_height="48dp"
@@ -56,15 +72,14 @@
             android:autofillHints="emailAddress"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
-            android:inputType="textEmailSubject"
-            android:background="@drawable/borders"
+            android:inputType="textEmailAddress"
+            android:background="@drawable/border_white"
             android:padding="8dp"
             android:layout_marginTop="20dp"
             style="@style/login_text"
-            app:layout_constraintTop_toBottomOf="@id/name_input"
+            app:layout_constraintTop_toBottomOf="@id/username_input"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
-
     <EditText
             android:id="@+id/password_input"
             android:layout_width="300dp"
@@ -74,7 +89,7 @@
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:inputType="textPassword"
-            android:background="@drawable/borders"
+            android:background="@drawable/border_white"
             android:padding="8dp"
             android:layout_marginTop="20dp"
             style="@style/login_text"
@@ -91,7 +106,7 @@
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:inputType="textPassword"
-            android:background="@drawable/borders"
+            android:background="@drawable/border_white"
             android:padding="8dp"
             android:layout_marginTop="20dp"
             style="@style/login_text"
