--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="head">#00FFFF</color>
     <color name="button_purple">#6851A5</color>
     <color name="light_blue">#ADD8E6</color>
+    <color name="light_yellow">#FFFFE0</color>
 </resources>
