--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="button_purple">#6851A5</color>
     <color name="light_blue">#ADD8E6</color>
     <color name="light_yellow">#FFFFE0</color>
+    <color name="gray">#808080</color>
 </resources>
