--- a/app/src/main/res/layout/fragment_change_username.xml
+++ b/app/src/main/res/layout/fragment_change_username.xml
@@ -21,7 +21,7 @@
 
     <!-- Email Input Field -->
     <EditText
-            android:id="@+id/email_input"
+            android:id="@+id/newUsername_input"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:hint="Enter New Username"
