--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -35,6 +35,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/settings"
                     android:textColor="@color/black"
+                    android:paddingStart="40dp"
+                    android:paddingEnd="0dp"
                     android:textSize="50sp"
                     android:fontFamily="sans-serif-medium"
                     android:layout_marginStart="16dp" />
